# Shika-s-OpenGLRenderer

./: CMakeLists.txt  LICENSE  README.ja.md  README.md
assets/shaders/: basic.fs  colors.fs  colors.vs  light_cube.fs  light_cube.vs
include/: Mesh.h  Model.h  Shader.h
src/: Shader.cpp  main.cpp
